2.5.5.DIP.1.Динамическое перераспределение продуктов[#854]